--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM"
+        xmlns:views="clr-namespace:MVVM.Views"
         mc:Ignorable="d"
         Title="ReservRoom" Height="450" Width="800">
     <Grid>
+        <views:MakeReservationView/>
 
     </Grid>
 </Window>
