--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="MVVM.MainWindow"
+﻿<Window Icon="Images/hotel2.ico"
+    x:Class="MVVM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM"
         xmlns:views="clr-namespace:MVVM.Views"
-        mc:Ignorable="d"
+        mc:Ignorable="d" 
         Title="ReservRoom" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="20 10">
         <views:MakeReservationView/>
 
     </Grid>
