--- a/Views/MakeReservationView.xaml
+++ b/Views/MakeReservationView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:MVVM.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid>
+    <Grid Grid.IsSharedSizeScope="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
@@ -29,14 +29,16 @@
         </Grid>
 
 
-        <Grid Grid.Row="2"  Margin="0 25 0 0">
+        <Grid Grid.Row="2"  Margin="0 10 0 0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"
+                                  SharedSizeGroup="FirstColumn"/>
+                <ColumnDefinition Width="auto"
+                                  SharedSizeGroup="SecondColumn"/>
             </Grid.ColumnDefinitions>
             
             <TextBlock Grid.Row="0" 
@@ -50,23 +52,23 @@
             
             <TextBlock Grid.Row="0"
                        Grid.Column="1" 
-                       Margin="5 0 0 0"
+                       Margin="10 0 0 0"
                        Text="Room No."/>
 
             <TextBox Grid.Row="1"
                      Grid.Column="1"
                      Text=""
-                     Margin="5 5 0 0 "/>
+                     Margin="10 5 0 0 "/>
         </Grid>
 
-        <Grid Grid.Row="3"  Margin="0 25 0 0">
+        <Grid Grid.Row="3"  Margin="0 10 0 0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"  SharedSizeGroup="FirstColumn"/>
+                <ColumnDefinition Width="auto"  SharedSizeGroup="SecondColumn"/>
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Row="0" 
@@ -80,17 +82,18 @@
 
             <TextBlock Grid.Row="0"
                        Grid.Column="1" 
-                       Margin="5 0 0 0"
+                       Margin="10 0 0 0"
                        Text="End Date"/>
 
             <DatePicker Grid.Row="1"
                      Grid.Column="1"
                        SelectedDate=""
-                     Margin="5 5 0 0 "/>
+                     Margin="10 5 0 0 "/>
         </Grid>
-        <StackPanel Orientation="Horizontal" Grid.Row="4"  Margin="0 25 0 0">
+        <StackPanel Orientation="Horizontal" Grid.Row="4" 
+                    Margin="0 25 0 0">
             <Button Content="Submit"/>
-            <Button Content="Cancel" Margin="5 0 0 0"/>
+            <Button Content="Cancel" Margin="10 0 0 0"/>
         </StackPanel>
 
     </Grid>
