--- a/Views/MakeReservationView.xaml
+++ b/Views/MakeReservationView.xaml
@@ -17,7 +17,7 @@
 
         <TextBlock Text="Make Reservation"
                    Grid.Row="0" 
-                   FontSize="24"/>
+                   Style="{StaticResource Header}"/>
 
         <Grid Grid.Row="1" Margin="0 25 0 0">
             <Grid.RowDefinitions>
