--- a/Views/MakeReservationView.xaml
+++ b/Views/MakeReservationView.xaml
@@ -24,7 +24,7 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="Name"/>
+            <TextBlock Grid.Row="0" Text="Username"/>
             <TextBox Grid.Row="1" Text="" Margin="0 5 0 0 " Width="150" HorizontalAlignment="Left"/>
         </Grid>
 
