--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="ReservRoom" Height="450" Width="800"
         FontSize="14">
     <Grid Margin="20 10" MaxWidth="600">
-        <views:ReservationListingView/>
+        <views:MakeReservationView/>
 
     </Grid>
 </Window>
