--- a/Views/MakeReservationView.xaml
+++ b/Views/MakeReservationView.xaml
@@ -25,7 +25,11 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Text="Username"/>
-            <TextBox Grid.Row="1" Text="" Margin="0 5 0 0 " Width="150" HorizontalAlignment="Left"/>
+            <TextBox Grid.Row="1" 
+                     Text="{Binding Username}"
+                     Margin="0 5 0 0"
+                     Width="150"
+                     HorizontalAlignment="Left"/>
         </Grid>
 
 
@@ -47,7 +51,7 @@
   
             <TextBox Grid.Row="1"
                      Grid.Column="0"
-                     Text=""
+                     Text="{Binding FloorNumber}"
                      Margin="0 5 0 0 "/>
             
             <TextBlock Grid.Row="0"
@@ -57,7 +61,7 @@
 
             <TextBox Grid.Row="1"
                      Grid.Column="1"
-                     Text=""
+                     Text="{Binding RoomNumber}"
                      Margin="10 5 0 0 "/>
         </Grid>
 
@@ -77,7 +81,7 @@
 
             <DatePicker Grid.Row="1"
                      Grid.Column="0"
-                     SelectedDate=""
+                     SelectedDate="{Binding StartDate}"
                      Margin="0 5 0 0 "/>
 
             <TextBlock Grid.Row="0"
@@ -87,13 +91,16 @@
 
             <DatePicker Grid.Row="1"
                      Grid.Column="1"
-                       SelectedDate=""
+                       SelectedDate="{Binding EndDate}"
                      Margin="10 5 0 0 "/>
         </Grid>
-        <StackPanel Orientation="Horizontal" Grid.Row="4" 
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="4" 
                     Margin="0 25 0 0">
-            <Button Content="Submit"/>
-            <Button Content="Cancel" Margin="10 0 0 0"/>
+            <Button Content="Submit" 
+                    Command="{Binding SubmitCommand}"/>
+            <Button Content="Cancel" Margin="10 0 0 0"
+                    Command="{Binding CancelCommand}"/>
         </StackPanel>
 
     </Grid>
