--- a/Views/MakeReservationView.xaml
+++ b/Views/MakeReservationView.xaml
@@ -26,7 +26,7 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Text="Username"/>
             <TextBox Grid.Row="1" 
-                     Text="{Binding Username}"
+                     Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                      Margin="0 5 0 0"
                      Width="150"
                      HorizontalAlignment="Left"/>
@@ -51,7 +51,7 @@
   
             <TextBox Grid.Row="1"
                      Grid.Column="0"
-                     Text="{Binding FloorNumber}"
+                     Text="{Binding FloorNumber, UpdateSourceTrigger=PropertyChanged}"
                      Margin="0 5 0 0 "/>
             
             <TextBlock Grid.Row="0"
@@ -61,7 +61,7 @@
 
             <TextBox Grid.Row="1"
                      Grid.Column="1"
-                     Text="{Binding RoomNumber}"
+                     Text="{Binding RoomNumber, UpdateSourceTrigger=PropertyChanged}"
                      Margin="10 5 0 0 "/>
         </Grid>
 
@@ -81,7 +81,7 @@
 
             <DatePicker Grid.Row="1"
                      Grid.Column="0"
-                     SelectedDate="{Binding StartDate}"
+                     SelectedDate="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
                      Margin="0 5 0 0 "/>
 
             <TextBlock Grid.Row="0"
